# Hangman

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Hangman Game.py  Home.py  MANIFEST.in  Makefile  README.md  app.py  dev_tools.py  pyproject.toml  pytest.ini  requirements.txt
config/: settings.yaml
data/: high_scores.json  words.json
data/words/: animals.json  business.json  countries.json  food.json  geography.json  history.json  literature.json  mathematics.json  movies.json  music.json  mythology.json  nature.json  professions.json  programming.json  science.json  space.json  sports.json  technology.json  vehicles.json
docs/: architecture.md  deployment.md  project_scope.md  roadmap.md  screenshots.md  testing.md
pages/: 1_Play_Game.py  2_Leaderboard.py  3_About.py
src/: config.py  constants.py  game.py  high_score.py  logger.py  models.py  scoring.py  utils.py  validator.py  word_loader.py
src/ui/: components.py  game_manager.py  keyboard.py  leaderboard.py  session.py  styles.py
tests/: conftest.py  test_config.py  test_game.py  test_high_score.py  test_utils.py  test_word_loader.py
validation/: validate_engine.py  validate_high_scores.py  validate_project.py  validate_word_database.py
