[project]
name = "hangman"
version = "1.0.0"
description = "Production-grade Hangman game built with Streamlit."
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]